--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ deploy:
   provider: pages
   local-dir: public
   skip-cleanup: true
+  github-token: $GITHUB_TOKEN
   keep-history: true
   on:
     branch: master
